--- a/wrangler.toml
+++ b/wrangler.toml
@@ -12,4 +12,5 @@ compatibility_date = "2023-05-26"
 # NODE_ID = "1"
 # API_TOKEN = "example_dev_token"
 # API_HOST = "api.v2board.com"
-UUID = "27d6ba64-3ec6-4b29-b553-1a1152cc7a90"
+PASSWORD = "pala"
+PROXYIP= "43.228.214.49"
